evnts page banner alignment fixed in mobile

--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
@@ -1590,7 +1590,7 @@ fieldset{
     .banner_text{
       font-size: 64px;
 	 margin-left: 2px;
-	 margin-top: 30px;
+	 margin-top: 30px; 
 	 @include breakpoint($tablet){
 	    font-size: 44px;
 		margin-left: 22px;
@@ -1598,8 +1598,11 @@ fieldset{
 		margin-bottom: 0;
 	 }
 	 @include breakpoint($mobile){
-	    font-size:34px;
-	    marrgin:inherit;
+	    font-size:34px; 
+	    margin-top: 20%;
+	margin: 0 auto;
+	margin-left: 10%;
+	max-width: 80%;
 	 }
     }
     .banner_text_main{      
@@ -1680,7 +1683,7 @@ fieldset{
    margin-bottom:30px;
    margin-left: 15px;
    @include breakpoint($mobile){
-     width:96%;
+     width:94%;
    }
    
   .my-voice-columns{
